@@ -1,3 +1,6 @@
+HEAD
+	+ Create events table
+	+ Bug fix: log watcher works again
 1.3.13
 	+ Bug fix: critical error in EventDaemon that prevented properly start
 	+ Cron script for manage logs does not run if another is already
